--- a/scss/index.scss
+++ b/scss/index.scss
@@ -44,4 +44,4 @@ $enable-flex: true;
 @import "bootstrap/scss/utilities-spacing";
 @import "bootstrap/scss/utilities-responsive";
 
-@import "media-query-helpers";
+@import "media-state";
