Minor dev updates, and more scaffolding! Yay!

--- a/scss/media-state.scss
+++ b/scss/media-state.scss
@@ -7,7 +7,7 @@
 		display: block;
 		position: fixed;
         top: 0;
-        left: 0;
+        right: 0;
 		background-color: cyan;
 		color: #fff;
 		font-weight: bold;
