--- a/scss/index.scss
+++ b/scss/index.scss
@@ -45,4 +45,5 @@ $enable-flex: true;
 @import "bootstrap/scss/utilities-responsive";
 
 @import "media-state";
-@import "equation";
+
+@import "bag";
