--- a/scss/media-state.scss
+++ b/scss/media-state.scss
@@ -6,7 +6,7 @@
 		content: $state;
 		display: block;
 		position: fixed;
-        top: 0;
+        top: 20px;
         right: 0;
 		background-color: cyan;
 		color: #fff;
