--- a/scss/bag.scss
+++ b/scss/bag.scss
@@ -1,14 +1,5 @@
 section.bag
 {
-    padding: 3.4em 0;
+    padding: 100px 0;
     background-color: #f1eee9;
-
-    figure
-    {
-        background-image: url("../img/bag.svg");
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 34em;
-    }
 }
