--- a/scss/media-state.scss
+++ b/scss/media-state.scss
@@ -6,36 +6,39 @@
 		content: $state;
 		display: block;
 		position: fixed;
-        top: 20px;
         right: 0;
+        bottom: 0;
+        width: 50px;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
 		background-color: cyan;
 		color: #fff;
 		font-weight: bold;
-		padding: 5px 10px;
 	}
 }
 
-@include media-breakpoint-up(xs)
+@include media-breakpoint-only(xs)
 {
     @include media-state("XS");
 }
 
-@include media-breakpoint-up(sm)
+@include media-breakpoint-only(sm)
 {
     @include media-state("SM");
 }
 
-@include media-breakpoint-up(md)
+@include media-breakpoint-only(md)
 {
     @include media-state("MD");
 }
 
-@include media-breakpoint-up(lg)
+@include media-breakpoint-only(lg)
 {
     @include media-state("LG");
 }
 
-@include media-breakpoint-up(xl)
+@include media-breakpoint-only(xl)
 {
     @include media-state("XL");
 }
