--- a/scss/index.scss
+++ b/scss/index.scss
@@ -11,7 +11,7 @@ $enable-flex: true;
 
 @import "media-state";
 
-@import "section";
-@import "svg";
+@import "defaults";
 @import "bloodbag";
+@import "brain";
 @import "rocket";
