--- a/scss/brain.scss
+++ b/scss/brain.scss
@@ -1,25 +1,17 @@
 section.brain
 {
     background-color: #e7576f;
-    background-image: url("./svg/rocket.svg");
 
-    svg
+    > .container
     {
-        display: none;
-        position: absolute;
-        left: 0;
-        right: 0;
-        // background-image: url("./svg/brain.svg");
-
-        @include media-breakpoint-up(md)
-        {
-            width: 34em * 0.7;
-        }
+        background-image: url("./svg/brain.svg");
+        background-size: contain;
+        background-position: center center;
+        background-repeat: no-repeat;
     }
 
     h1
     {
-        position: relative;
         color: #ffffff;
     }
 }
