--- a/scss/defaults.scss
+++ b/scss/defaults.scss
@@ -1,3 +1,16 @@
+@mixin font-scale($rem)
+{
+    font-size: $rem;
+    line-height: $rem * 1.48;
+    margin: 0;
+
+    & + svg
+    {
+        margin-top: $rem * 0.754;
+    }
+}
+
+
 section
 {
     padding-top: 5em;
@@ -13,31 +26,26 @@ section
 
     h1
     {
-        @mixin font-scale($rem)
-        {
-            font-size: $rem;
-            line-height: $rem * 1.48;
-            margin: 0;
-
-            & + svg
-            {
-                margin-top: $rem * 0.754;
-            }
-        }
-
         display: block;
         font-weight: 300;
         text-align: center;
 
         @include media-breakpoint-up(md)
         {
-            @include font-scale(4.5rem);
+            @include font-scale(4rem);
         }
 
         @include media-breakpoint-up(xs)
         {
             @include font-scale(3rem);
         }
+    }
+
+    p
+    {
+        font-weight: 300;
+
+        @include font-scale(1.5rem);
     }
 
     svg
