--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,7 +1,3 @@
-// $enable-flex: true;
-
-/* $font-family-base, $font-size-base, $line-height-base, $link-color */
-
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/normalize";
@@ -15,3 +11,5 @@
 @import "bloodbag";
 @import "brain";
 @import "rocket";
+@import "safari";
+@import "grid";
