--- a/scss/defaults.scss
+++ b/scss/defaults.scss
@@ -50,6 +50,11 @@ section
                 color: inherit;
                 text-decoration: none;
             }
+
+            &:visited
+            {
+                text-decoration: underline;
+            }
         }
     }
 
