--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,7 +5,7 @@
 @import "bootstrap/scss/type";
 @import "bootstrap/scss/grid";
 
-@import "media-state";
+// @import "media-state";
 
 @import "defaults";
 @import "bloodbag";
@@ -13,3 +13,4 @@
 @import "rocket";
 @import "safari";
 @import "grid";
+@import "stats";
