--- a/scss/stats.scss
+++ b/scss/stats.scss
@@ -1,15 +1,15 @@
 section.stats
 {
-    background-color: #fff;
+    background-color: #f1eee9;
 
     h1
     {
-        color: #666;
+        color: #d3d0cb;
     }
 
     p
     {
         margin-top: 1em;
-        color: #666;
+        color: #d3d0cb;
     }
 }
